# infer

./: .autotools  .cproject  .gitignore  .project  AUTHORS  CMakeLists.txt  COPYING  DESCRIPTION  Makefile.am  Makefile.in  NAMESPACE  README  README.md  aclocal.m4  auseiConfig.xml  config.h.in  config.h.in~  config.status  configure  configure.ac  cuda.mk  cudalt.py  libtool
R/: README  fitting.R  models.R  nztheileria-package.R  posterior.R  sim.R  test.init.r  testscript.r  zzz.R
R/infer/: DESCRIPTION  Makefile.am  NAMESPACE  configure.ac  libtool
R/infer/R/: aux.R  fitting.R  models.R  posterior.R  sim.R  zzz.R
R/infer/m4/: ax_check_cuda.m4
R/infer/src/: Makefile.am  Makevars.in  posterior.cpp  posterior.hpp
R/infer/src/Framework/: Makefile.am  SmpTypes.hpp  SpatMetaPop.hpp  StochasticNode.hpp  stlStrTok.hpp  types.hpp
R/infer/src/data/: Data.cpp  Data.hpp  Makefile.am
R/infer/src/interface/: Makefile.am  RData.cpp  RData.hpp  SpSINRMcmc.cpp  SpSINRMcmc.hpp  posterior.cpp  posterior.hpp
R/infer/src/mcmc/: DistanceMatrix.cu  DistanceMatrix.hpp  GpuLikelihood.cpp  GpuLikelihood.hpp  GpuLikelihood_gpu.cu  KernelUtils.cu  KernelUtils.cuh  Likelihood.cpp  Likelihood.hpp  MCMCUpdater.cpp  MCMCUpdater.hpp  Makefile.am  Mcmc.cpp  Mcmc.hpp  McmcFactory.cpp  McmcLikelihood.cpp  McmcLikelihood.hpp  PosteriorFileWriter.cpp  PosteriorHDF5Writer.cpp  PosteriorHDF5Writer.hpp  PosteriorWriter.cpp
R/infer/src/sim/: GillespieSim.hpp  Makefile.am  Makefile.in  SmpSirSim.cpp
R/nztheil/: DESCRIPTION  NAMESPACE
R/nztheil/R/: fitting.R  sim.R  zzz.R
R/nztheil/man/: infer-package.Rd  read.posterior.Rd
R/nztheil/src/: Makefile.am
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
cmake/Modules/: FindGSL.cmake
data/: fmd2001_northeast_uk.csv  fmd2001_northeast_uk_centred.csv  fmd2001_northeast_uk_ips.csv  test.epi
debug/: Makefile  config.h  config.status  libtool
debug/src/: Makefile
debug/src/Framework/: Makefile  librandom.la  libstlstrtok.la
debug/src/data/: Makefile  libPosteriorReader.la
debug/src/diags/: Makefile
debug/src/mcmc/: Makefile  Mcmc.lo
debug/src/sim/: Makefile
debug/src/unitTests/: Makefile  auseiMcmc  fmdOneStepAhead  fmdSim  testMcmc.com  testPosteriorReader  testSpatPointPop
doc/: Doxyfile  model.tex
m4/: ax_boost_mpi.m4  ax_boost_serialization.m4  ax_check_cuda.m4
man/: Posterior-class.Rd  nztheileria-package.Rd
release/: Makefile  config.h  config.status  libtool
release/brandenburg-0.1/: Makefile.am  Makefile.in  configure  configure.ac
release/brandenburg-0.1/src/: Makefile.am  Makefile.in
release/brandenburg-0.1/src/unitTests/: Makefile.am  Makefile.in  fmdMcmc.cpp
release/brandenburg-0.3alpha/: Makefile.in  configure
release/brandenburg-0.3alpha/_build/: Makefile  config.h  config.status  libtool
release/brandenburg-0.3alpha/src/: Makefile.in
release/brandenburg-0.3alpha/src/Framework/: Contact.hpp  DataImporter.hpp  EmpCovar.hpp  EpiRiskException.hpp  Individual.hpp  Makefile.am  Makefile.in  McmcWriter.hpp  Parameter.hpp  Random.cpp  Random.hpp  SpatPointPop.hpp  StochasticNode.hpp  stlStrTok.cpp  stlStrTok.hpp  types.hpp
release/src/: Makefile
release/src/Framework/: Makefile  librandom.la  stlStrTok.lo
release/src/data/: Makefile  PosteriorReader.lo  (+1 more)
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
src-old/Framework/: McmcWriter.hpp
src-old/data/: Data.cpp  PosteriorReader.cpp
src-old/mcmc/: GpuLikelihood_gpu.cu  GpuUtils.cpp~  GpuUtils.hpp~  MCMCUpdater.hpp  Mcmc.cpp  Mcmc.hpp  PosteriorHDF5Writer.hpp  PosteriorPgSQLWriter.cpp  PosteriorPgSQLWriter.hpp  SquareWave.hpp
src-old/sim/: Makefile.am  SirDeterministic.cpp
src-old/unitTests/: MatLikelihood.cpp  MatLikelihood.hpp  auseiMcmc.cpp  fmdModel.cpp  testEmpCov.cpp  testEpiData.ipt  testPopData.csv  testPosteriorReader.cpp  testRandom.cpp
src/Framework/: CMakeLists.txt  Contact.hpp  DataImporter.hpp  EmpCovar.hpp  EpiRiskException.hpp  Individual.cpp  Individual.hpp  Makefile  Makefile.am  Makefile.in  McmcWriter.hpp  Model.hpp  Parameter.cpp  Parameter.hpp  RUtils.cpp  RUtils.hpp  Random.cpp  Random.hpp  STLIndex.hpp  SmpIndividual.cpp~  SmpTypes.hpp~  SpatPointPop.hpp  StochasticNode.cpp  StochasticNode.hpp  stlStrTok.cpp  stlStrTok.hpp  types.hpp
src/data/: CMakeLists.txt  Data.cpp  Data.hpp  Makefile  Makefile.am  Makefile.in
src/diags/: Makefile.am  Makefile.in  OneStepAhead.hpp  SellkeDiagnostic.hpp
src/interface/: Makefile.am  Makefile.in  RData.cpp  RData.hpp  posterior.cpp  posterior.hpp  theileriaMcmc.cpp  theileriaMcmc.hpp
src/mcmc/: CMakeLists.txt  CpuLikelihood.cpp  CpuLikelihood.hpp  CpuVecLikelihood.cpp  CpuVecLikelihood.hpp  CubicSpline1.cu  CubicSpline1.hpp  GpuLikelihood.cpp  GpuLikelihood.hpp  GpuLikelihood_gpu.cu  GpuLikelihoodgpu.cu  GpuUtils.cpp  GpuUtils.hpp  Likelihood.cpp  Likelihood.hpp  MCMCUpdater.cpp  MCMCUpdater.hpp  Makefile  Makefile.am  Makefile.in  Mcmc.cpp  Mcmc.hpp  McmcFactory.cpp  McmcFactory.hpp  McmcLikelihood.cpp  McmcLikelihood.hpp  PosteriorFileWriter.cpp  PosteriorFileWriter.hpp  PosteriorHDF5Reader.cpp  PosteriorHDF5Reader.hpp  PosteriorHDF5Writer.cpp  PosteriorHDF5Writer.hpp  PosteriorPgSQLWriter.hpp  PosteriorWriter.cpp  PosteriorWriter.hpp  SquareWave.hpp  StochasticNode.cpp  StochasticNode.hpp  TheileriaData.hpp  likKernels.cl
src/sim/: GillespieSim.hpp  Makefile.am  Makefile.in  SirDeterministic.cpp  SirDeterministic.hpp  simulate.cpp  simulate.hpp
src/unitTests/: CMakeLists.txt  Data.cpp  Data.hpp  GpuLikelihood.cu  GpuLikelihood.hpp  Makefile.am  Makefile.in  MatLikelihood.cpp  MatLikelihood.cu  MatLikelihood.hpp  auseiMcmc.cpp  fmdMcmc.cpp  fmdMcmcGpu.cpp  fmdMcmcVec.cpp  fmdModel.cpp  fmdModel.hpp  fmdOneStepAhead.cpp  fmdSellkeDiagnostic.cpp  fmdSim.cpp  paramTest.cpp  testCpuLik.cpp  testCpuVecLik.cpp  testGpuLik.cpp  testLikelihood.cpp  testMcmc.cpp  testRandom.cpp  testSpatPointPop.cpp  theileriaMcmc.cpp  theileriaModel.hpp  theileriaSim.cpp
src/utils/: utils.r
testdata/: aiPopulation.csv  sim702.ipt
(+140 files in other folders)
